# apple-notes-exporter-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: publish.yml
src/: lib.rs  main.rs
